# PokerMind

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: client.py  log.py  server.py
src/game/: card.py  game.py  gamewinner.py  guess.py  hand.py  handranking.py  pokermind.py  rank.py  suit.py
src/service/: concurrency.py  interface.py  proxy.py  skeleton.py
static/: TesinaCompleta.knwf
tests/: hands.py
