[project]
name = "pokermind"
version = "0.1.0"
description = "PokerMind Client-Server"
readme = "README.md"
authors = [{"name" = "Midblyte"}, {"name" = "AngelogyPythITA"}]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
pokermind       = "client:main"
pokermindserver = "server:main"

[dependency-groups]
dev = [
    "pip>=25.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
